Fix up a few things before publish

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "Emulates the new project button in eclipse to setup a Java project (including the classpath and .project files).",
     "version": "1.0.0",
     "publisher": "mellena1",
-    "license": "SEE LICENSE IN ./LICENSE",
+    "author": {
+        "name": "Andrew Mellen"
+    },
+    "license": "SEE LICENSE IN LICENSE",
     "engines": {
         "vscode": "^1.23.0"
     },
